# cs_caller

./: README.md  pyproject.toml  requirements.txt
config/: app_settings.yaml
config/maps/: de_dust2.yaml
packaging/: cs_caller_gui.spec
scripts/windows/: build_exe.bat
src/cs_caller/: __init__.py  announcer.py  app_settings.py  callout_mapper.py  cli.py  detector.py  frame_clock.py  gui_entry.py  map_config_store.py  ndi_handshake.py  pipeline.py  preflight.py  region_editor.py  runtime_helpers.py  source_factory.py  timeout_settings.py
src/cs_caller/gui/: __init__.py  app.py  connect_state.py
src/cs_caller/sources/: __init__.py  base.py  mock_source.py  ndi_native.py
src/cs_caller/tts/: __init__.py  base.py  console_tts.py  pyttsx3_tts.py
tests/: test_announcer.py  test_app_settings.py  test_callout_mapper.py  test_cli_validation.py  test_connect_state.py  test_gui_runtime_helpers.py  test_map_config_store.py  test_ndi_handshake.py  test_ndi_native.py  test_preflight.py  test_region_editor.py  test_source_factory.py  test_timeout_settings.py
